fix alignment in middle section II

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
 
 footer p{
   color:white;
-  font-family: playfair;
 }
 
 footer {
